# finoa_xtz

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt  finoa_xtz.c  finoa_xtz.h  finoa_xtz_config.h  finoa_xtz_utils.c
test/: CMakeLists.txt  unitTests.cpp
